# PrEWSelectorAnalysis

./: .gitignore  CMakeLists.txt  Readme.md
macros/: compile.sh
notebook/: ResultNotebook.ipynb
source/: DistrReader.py  main.cpp
